@@ -389,6 +389,33 @@ od(0, 18446744073709551629); Mod(7, 18446744073709551629), Mod(8, 1844674407
 3709551629), Mod(1, 18446744073709551629)]
 [1 + O(101^3), 2 + O(101^3), 0; 4 + O(101^3), 5 + O(101^3), 0; 7 + O(101^3),
  8 + O(101^3), 1]
+matsupplement:
+[Mod(1, 2), Mod(0, 2), Mod(0, 2), Mod(0, 2), Mod(0, 2); Mod(0, 2), Mod(1, 2)
+, Mod(0, 2), Mod(0, 2), Mod(0, 2); Mod(0, 2), Mod(0, 2), Mod(1, 2), Mod(0, 2
+), Mod(0, 2); Mod(0, 2), Mod(0, 2), Mod(0, 2), Mod(1, 2), Mod(0, 2); Mod(0, 
+2), Mod(0, 2), Mod(0, 2), Mod(0, 2), Mod(1, 2)]
+[Mod(1, 7), Mod(0, 7), Mod(0, 7), Mod(0, 7), Mod(0, 7); Mod(0, 7), Mod(1, 7)
+, Mod(0, 7), Mod(0, 7), Mod(0, 7); Mod(0, 7), Mod(0, 7), Mod(1, 7), Mod(0, 7
+), Mod(0, 7); Mod(0, 7), Mod(0, 7), Mod(0, 7), Mod(1, 7), Mod(0, 7); Mod(0, 
+7), Mod(0, 7), Mod(0, 7), Mod(0, 7), Mod(1, 7)]
+[Mod(1, 3037000507), Mod(0, 3037000507), Mod(0, 3037000507), Mod(0, 30370005
+07), Mod(0, 3037000507); Mod(0, 3037000507), Mod(1, 3037000507), Mod(0, 3037
+000507), Mod(0, 3037000507), Mod(0, 3037000507); Mod(0, 3037000507), Mod(0, 
+3037000507), Mod(1, 3037000507), Mod(0, 3037000507), Mod(0, 3037000507); Mod
+(0, 3037000507), Mod(0, 3037000507), Mod(0, 3037000507), Mod(1, 3037000507),
+ Mod(0, 3037000507); Mod(0, 3037000507), Mod(0, 3037000507), Mod(0, 30370005
+07), Mod(0, 3037000507), Mod(1, 3037000507)]
+[Mod(1, 18446744073709551629), Mod(0, 18446744073709551629), Mod(0, 18446744
+073709551629), Mod(0, 18446744073709551629), Mod(0, 18446744073709551629); M
+od(0, 18446744073709551629), Mod(1, 18446744073709551629), Mod(0, 1844674407
+3709551629), Mod(0, 18446744073709551629), Mod(0, 18446744073709551629); Mod
+(0, 18446744073709551629), Mod(0, 18446744073709551629), Mod(1, 184467440737
+09551629), Mod(0, 18446744073709551629), Mod(0, 18446744073709551629); Mod(0
+, 18446744073709551629), Mod(0, 18446744073709551629), Mod(0, 18446744073709
+551629), Mod(1, 18446744073709551629), Mod(0, 18446744073709551629); Mod(0, 
+18446744073709551629), Mod(0, 18446744073709551629), Mod(0, 1844674407370955
+1629), Mod(0, 18446744073709551629), Mod(1, 18446744073709551629)]
+[1, 0, 0, 0, 0; 0, 1, 0, 0, 0; 0, 0, 1, 0, 0; 0, 0, 0, 1, 0; 0, 0, 0, 0, 1]
   ***   Warning: new stack size = 1000000 (0.954 Mbytes).
 68
 2
@@ -514,4 +541,4 @@ Vecsmall([2, 2, 0, -4, -10])
   ***                                    ^---
   *** _^_: impossible inverse in ZM_inv: [1, 2, 3; 4, 5, 6; 7, 8, 9].
 [;]
-Total time spent: 628
+Total time spent: 844
