@@ -149,6 +149,7 @@ BA  108- sqrtn(Mod(9, 101), -2) -> wrong result
 BA  118- [win32] plot colors were shifted by 1
     119- RgX_translate(P,c) with c equal to \pm 1 (e.g. as t_REAL or t_PADIC)
          incorrectly replaced c by its t_INT approximation [#1995]
+BA  120- matsupplement(Mod(matrix(5,1),2)) --> SEGV [#1996]
 
   Added
       1- [libari] ZM_isidentity
